# DistributedKernelShap

./: Analysis.ipynb  README.md  api.py  benchmark_pool.sh  distributed.py  environment.yml  experiment.py  fit_adult_model.py  kernel_shap.py  process_adult_data.py  process_data.py  pyproject.toml  requirements.txt  serve_explanations.py  utils.py
benchmarks/: experiment.py  k8s_benchmark_pool.sh  k8s_benchmark_serve.sh  k8s_ray_pool.py  k8s_serve_explanations.py  ray_pool.py  ray_pool_benchmark.py  serve_explanations.py
cluster/: Makefile  Makefile.dummy  Makefile.pool  Makefile.serve  ray_cluster.yaml  ray_pool_cluster.yaml
dockerfiles/: Dockerfile  Dockerfile.raypool  Makefile
explainers/: distributed.py  kernel_shap.py  utils.py  wrappers.py
explainers/utils/: __init__.py  distributed.py  utils.py
scripts/: fit_adult_model.py  process_adult_data.py
utils/: utils.py  wrappers.py
