[tool.poetry]
name = "distributedkernelshap"
version = "0.1.0"
description = "A package that uses ray to distribute KernelSHAP"
authors = ["alexcoca <alexcoca23@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=19.1.0"
numpy = ">=1.17.4"
pandas = ">=0.23.4"
prettyprinter = ">=0.18.0"
ray = "^0.8.7"
scipy = ">=1.3.1"
scikit-learn = ">=0.21.2"
shap = ">=0.35.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
