[tool.poetry]
name = "explainers"
version = "0.1.0"
description = "A package that uses ray to distribute KernelSHAP"
authors = ["Alex Coca <alexcoca23@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=19.1.0"
numpy = ">=1.17.4"
pandas = ">=0.23.4"
prettyprinter = ">=0.18.0"
ray = {version = "0.8.6", extras = ["serve"]}
scipy = ">=1.3.1"
scikit-learn = ">=0.21.2"
shap = ">=0.35.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
